[package]
name = "axum-graceful-shutdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.axum]
version = "0.4"
features = ["ws"]

[dependencies.axum-server]
version = "0.3"

[dependencies.futures-util]
version = "0.3"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.tokio-tungstenite]
version = "0.17"

[dependencies.url]
version = "2"
